[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/places/temple/temple.gd" type="Script" id=2]
[ext_resource path="res://scenes/places/base_place.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/aseprite_files/places/temple/temple.ase" type="SpriteFrames" id=7]
[ext_resource path="res://assets/aseprite_files/places/temple/santa_sleigh.ase" type="SpriteFrames" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[node name="temple" instance=ExtResource( 3 )]
script = ExtResource( 2 )

[node name="bg" parent="background" index="0"]
frames = ExtResource( 7 )
animation = "clouds"

[node name="santa_sleigh" type="AnimatedSprite" parent="background" index="1"]
visible = false
frames = ExtResource( 8 )
centered = false

[node name="outer" parent="logic/border" index="0"]
polygon = PoolVector2Array( 0, 84, 128, 84, 128, 128, 0, 128 )

[node name="enterance_door" type="Position2D" parent="logic/entry_points" index="0"]
position = Vector2( 64, 124 )

[node name="prison_door" type="Position2D" parent="logic/entry_points" index="1"]
position = Vector2( 14, 113 )

[node name="side" type="Position2D" parent="logic/npc_positions" index="0"]
position = Vector2( 112, 112 )

[node name="at_window" type="Position2D" parent="logic/npc_positions" index="1"]
position = Vector2( 48, 90 )

[node name="prison_door" type="Area2D" parent="logic/portals" index="0"]
position = Vector2( 1, 104 )
collision_layer = 0
collision_mask = 32

[node name="collision" type="CollisionShape2D" parent="logic/portals/prison_door" index="0"]
shape = SubResource( 1 )

[node name="enterance_door" type="Area2D" parent="logic/portals" index="1"]
position = Vector2( 64, 127 )
collision_layer = 0
collision_mask = 32

[node name="collision" type="CollisionShape2D" parent="logic/portals/enterance_door" index="0"]
shape = SubResource( 1 )

[connection signal="animation_finished" from="background/bg" to="." method="_on_bg_animation_finished"]
[connection signal="animation_finished" from="background/santa_sleigh" to="." method="loop_santa_sleigh"]
[connection signal="body_entered" from="logic/portals/prison_door" to="." method="_prison_door_trigger"]
[connection signal="body_entered" from="logic/portals/enterance_door" to="." method="_enterance_door_trigger"]
